Página STBK 1.1 header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,26 @@
 <body>
     <header>
         <div class="line">
-
+            <div class="container header--area">
+                <div class="header--left">
+                    <!--logo field-->
+                    <a href=""><img src="assets/Images/logo.png" alt="logo"></a>
+                </div>
+                <div class="header--right">
+                    <div class="header--search">
+                        <form>
+                            <!--search field-->
+                            <input type="text" name="search" placeholder="Search" />
+                            <button>
+                                <img src="assets/images/loupe.png" alt="loupe">
+                            </button>
+                        </form>
+                    </div>
+                    <div class="header--menu">
+                        <img src="assets/Images/menu.png" alt="menu" />
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 </body>
