--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
             </div>
         </div>
     </header>
+    <!--main content-->
+    <section class="banner">
+        <div class="container">
+            <h1>Starbucks®<br>Happy Hour<br></h1>
+            <span>We'll meet you in your inbox. Drink deals are on their way.</span>
+            <div class="banner--images">
+                <img src="assets/Images/c1.jpg" alt="Drink" />
+                <img src="assets/Images/c2.jpg" alt="Drink" />
+                <img src="assets/Images/c3.jpg" alt="Drink" />
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
