--- a/index.html
+++ b/index.html
@@ -46,6 +46,48 @@
             </div>
         </div>
     </section>
+    <section class="area1">
+        <!--Aplication Grid-->
+        <div class="area1--content">
+            <div class="bar"></div>
+            <h2>Four Drinks, A Milion<br> Reasons</h2>
+            <br>
+            <div class="area1--quote"><em>"Just love yourself and you're set."</em></div>
+            <div class="area1--text">
+                Laydy Gaga and Starbucks share a mission: to build a kinder, braver world. Through the Born this way
+                Fundation, Laydy
+                Gaga has ispired her fans to embrace kindness in their communities-online and in the world. With your
+                help, we can empower
+                young people to.spread more kindness.<br>
+                <div class="area1--button">
+                    <a class="button" href="">learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="area1--img1"></div>
+        <div class="area1--img2"></div>
+        </div>
+    </section>
+    <section class="area2">
+        <!--Aplication Grid-->
+        <div class="area2--content">
+            <div class="bar"></div>
+            <h2>Introduccing Vanilla Sweet<br>Cream Cold Brew--Sweet,<br>Creamy, Cold, Bold.</h2>
+            <br>
+            <div class="area2--text">
+                Just before serving, our slow-steeped custom blend
+                Starbucks® Cold Brew Coffe is topped with a delicate float
+                of house-made vanilla sweet cream that cascades
+                throughout the cup.<br>
+                <div class="area2--button">
+                    <a class="button" href="">learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="area2--img1"></div>
+        <div class="area2--img2"></div>
+        </div>
+    </section>
 </body>
 
 </html>
