--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!--Aplication Grid-->
         <div class="area2--content">
             <div class="bar"></div>
-            <h2>Introduccing Vanilla Sweet<br>Cream Cold Brew--Sweet,<br>Creamy, Cold, Bold.</h2>
+            <h2>Introduccing Vanilla Sweet<br>Cream Cold Brew–Sweet,<br>Creamy, Cold, Bold.</h2>
             <br>
             <div class="area2--text">
                 Just before serving, our slow-steeped custom blend
@@ -87,6 +87,20 @@
         <div class="area2--img1"></div>
         <div class="area2--img2"></div>
         </div>
+    </section>
+    <section class="area3">
+        <div class="area3--content">
+            <h2>The New Ultra Caramel<br>Frappuccino Is Here</h2>
+            <div class="area3--text">
+                Congrats on doing that thing! This calls for caramel. Lots
+                of it. With cold brew whipped cream. the new Ultra
+                Caramel Frappuccino is here!
+            </div>
+            <div class="area3--button">
+                <a class="button" href="">learn more</a>
+            </div>
+        </div>
+        <div class="area3--img1"></div>
     </section>
 </body>
 
