Página STBK 1.4.1 Grid add area

--- a/index.html
+++ b/index.html
@@ -102,6 +102,33 @@
         </div>
         <div class="area3--img1"></div>
     </section>
+    <section class="area4">
+        <div class="area4--content">
+            <div class="bar"></div>
+            <h2>Kindness Start<br>With A Cup</h2>
+            <div class="area4--text">
+                Introducing the Cups of Kindness
+                collection: four very special drinks as
+                delicious and refreshing as they are
+                beautiful. Two new creations, Matcha
+                Lemonad and Violet Drink, will join Pink
+                Drink as instant summer favorites.
+            </div>
+            <div class="area4--button">
+                <a class="button" href="">learn more</a>
+            </div>
+        </div>
+        <div class="area4--img1"></div>
+    </section>
+    <section class="area5">
+        <div class="area5--img1"></div>
+    </section>
+    <footer>
+        Made by Rafael Loureiro
+        <br>
+        Website credits for Nicepage
+
+    </footer>
 </body>
 
 </html>
